merging parts